Added server side scripting instructions to config file

--- a/webserver.cfg
+++ b/webserver.cfg
@@ -1,4 +1,5 @@
 {
+  "usage": "To use server side scripting the script must be in a file of it's own and the file name must end in .php"
   "host": "0.0.0.0",
   "port": "8080"
 }
